[tool.poetry]
name = "2022-06-17"
version = "0.1.0"
description = ""
authors = ["Bradley McElroy <bradley.mcelroy@live.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
nautilus-trader = { version = "^1.200.0", extras=["ib"] }

invoke = "^2.0.0"
scikit-learn = "^1.1.1"
scipy = "^1.8.1"
docker = "^7.0.0"

[tool.poetry.dev-dependencies]
voila = "^0.3.5"
ipykernel = "^6.13.1"
python-dotenv = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
